--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Hugo is a general-purpose website framework. Technically speaking, Hugo is a sta
 </main>
 <footer id=footer class=footer>
 <div class=social-links>
-<a href=http://localhost:1313 class="iconfont icon-github" title=github></a>
+<a href=https://github.com/laraws class="iconfont icon-github" title=github></a>
 <a href=https://laraws.github.io/index.xml type=application/rss+xml class="iconfont icon-rss" title=rss></a>
 </div>
 <div class=copyright>
